# hypypyp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yaml
docs/source/: api.rst  conf.py  examples.rst  hyp.rst  index.rst  installation.rst  quickstart.rst  seth.rst  terminology.rst
examples/: ex_function.py  ex_homset.py  ex_hyp_basic.py  ex_hyp_coproducts.py  ex_hyp_funny.py  ex_hyp_homset.py  ex_hyp_morphisms.py  ex_hyp_mutables.py  ex_hyp_products.py  ex_set_colimits.py  ex_set_coproduct.py  ex_set_limits.py  ex_set_product.py  ex_set_th.py  ex_setoids.py  ex_sets.py
github/workflows/: docs.yaml
src/hyp/: core.py
src/seth/: core.py
tests/: test_examples.py  test_function.py  test_imports.py  test_sets.py
