[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypypyp"
version = "0.1.0"
description = "A categorical hypergraph library based on spans"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Axel Osmond" }
]
license = { text = "MIT" }

dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "pylint",
    "black",
    "ruff",
    "sphinx",
    "furo",
    "sphinx-autodoc-typehints",
    "myst-parser",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = false

[tool.pylint.main]
py-version = "3.11"
source-roots = ["src"]

[tool.pylint.format]
max-line-length = 100

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py311"